fix text wrap issue, data persists through refresh, comment client js

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -41,6 +41,7 @@ article {
   margin-right: 13px;
   border: none;
   border-bottom: 3px solid;
+  word-break: break-word;
 }
 
 .icons-date {
